[package]
name = "jubjub"
version = "0.0.1"
authors = ["Sean Bowe <ewillbefull@gmail.com>"]

[dependencies]
rand = "0.3"

[dependencies.pairing]
git = "https://github.com/cryptape/pairing.git"
branch = "0.11-release"
default-features = false

[dependencies.bellman]
git = "https://github.com/cryptape/bellman.git"
branch = "0.0.4_modified"
default-features = false

[features]
default = ["u128-support"]
u128-support = ["pairing/u128-support", "bellman/u128-support"]
